# IoTWebApi/bin/Release/net5.0/swagger.json
@@ -131,6 +131,134 @@
         }
       }
     },
+    "/api/Seismic/login": {
+      "post": {
+        "tags": [
+          "Seismic"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/api/Seismic/recent": {
+      "get": {
+        "tags": [
+          "Seismic"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/SeismicResponse"
+            }
+          }
+        }
+      }
+    },
+    "/api/Seismic/shakemap": {
+      "post": {
+        "tags": [
+          "Seismic"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/api/Seismic/earthquakes": {
+      "post": {
+        "tags": [
+          "Seismic"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/api/Seismic/download/{id}": {
+      "post": {
+        "tags": [
+          "Seismic"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/api/Seismic/upload": {
+      "post": {
+        "tags": [
+          "Seismic"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "file",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/WeatherForecast": {
       "get": {
         "tags": [
@@ -156,6 +284,60 @@
     }
   },
   "definitions": {
+    "SeismicData": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "eventTime": {
+          "type": "string"
+        },
+        "latitude": {
+          "format": "double",
+          "type": "number"
+        },
+        "longitude": {
+          "format": "double",
+          "type": "number"
+        },
+        "depth": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "maganitude": {
+          "format": "double",
+          "type": "number"
+        },
+        "region": {
+          "type": "string"
+        },
+        "hasShakeMap": {
+          "type": "boolean"
+        },
+        "shakeMapUrl": {
+          "type": "string"
+        }
+      }
+    },
+    "SeismicResponse": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SeismicData"
+          }
+        },
+        "hasError": {
+          "type": "boolean"
+        },
+        "error": {
+          "type": "string"
+        }
+      }
+    },
     "WeatherForecast": {
       "type": "object",
       "properties": {
